--- a/pages/mapas.html
+++ b/pages/mapas.html
@@ -11,7 +11,7 @@
     <script defer src="../index.js"></script>
     <title>league of legends</title>
 </head>    
-<body>
+<body class="bodycamp">
     <header class="header">
         <nav class="nav">
             <a class="logo" href="../index.html">
