--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="./img/lols.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+NSW+ACT+Foundation:wght@500&family=Edu+QLD+Beginner:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@700&family=Finlandica:wght@700&family=Ibarra+Real+Nova&family=Oswald:wght@600&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro:ital,wght@1,900&family=Splash&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="../index.js"></script>
     <title>Document</title>
 </head>
