--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
 <body>
     <header class="header">
-
         <nav class="nav">
-            <a class="logo" href="index.html">
+            <a class="logo" href="../index.html">
                 <img src="./img/lols.png" alt="logolol">
             </a>
             <button class="nav-toggle" aria-label="abrir menu">
@@ -134,7 +133,9 @@
             </div>
         </section>
         <section class="mapass">
-            <div class="mapari"><h2>Modos de juego</h2></div>
+            <div class="mapari">
+                <h2>Modos de juego</h2>
+            </div>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
