modificamos y hacemos responsive grids

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -34,20 +34,60 @@
           </ul>
         </nav>
     </header>
-    <main class="camp">
-        <h1>Galeria</h1>
-        <section class="grid-container">
-            <div class="grid-items item1">1</div>
-            <div class="grid-items item2">2</div>
-            <div class="grid-items item3">3</div>
-            <div class="grid-items item4">4</div>
-            <div class="grid-items item5">5</div>
-            <div class="grid-items item6">6</div>
-            <div class="grid-items item7">7</div>
-            <div class="grid-items item8">8</div>
-            <div class="grid-items item9">9</div>
-        </section>
-    </main>
+   <div class="camp">
+    <h1>Galeria</h1>
+   </div> 
+    <div class="container-img">
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://coolhdwall.com/storage/202104/arcane-silco-netflix-series-hd-wallpaper-1920x1080.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://wallpapercave.com/wp/wp10232888.png" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://c4.wallpaperflare.com/wallpaper/801/642/377/jinx-league-of-legends-arcane-vi-league-of-legends-caitlyn-league-of-legends-hd-wallpaper-thumb.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://wallpapercave.com/wp/wp10235766.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://images6.alphacoders.com/118/thumb-1920-1188254.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://images6.alphacoders.com/119/1193347.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://www.xtrafondos.com/wallpapers/vi-de-arcane-8958.jpg" alt="">
+            </figure>
+        </div>
+        <div class="box-img">
+            <a href="#"></a>
+            <figure>
+                <img src="https://wallpapercave.com/wp/wp10666586.jpg" alt="">
+            </figure>
+        </div>
+    </div>
+    </div>
     <footer>
         <div class="playstore">
             <h3>lleva lol contigo</h3>
