--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
     <main>
         <section class="showcase">
             <div class="video-container">
-                <video src="./img/lolvideo.mp4" autoplay muted loop></video>
+                <video src="https://www.leagueoflegends.com/static/hero-blurred-7572101a2ce5e003b66483b7fe5c5d36.webm" autoplay muted loop></video>
             </div>
-            <div class="content">
+            <div class="video2">
+                <video src="https://www.leagueoflegends.com/static/hero-0632cbf2872c5cc0dffa93d2ae8a29e8.webm" autoplay muted loop></video>
+                <div class="pqsi">
+                    <img src="https://www.leagueoflegends.com/static/logo-1200-589b3ef693ce8a750fa4b4704f1e61f2.png" alt="">
+                    <a href="index.html"> juega gratis</a>
+
+                </div>
+            </div>
+            <!--<div class="content">
                 <h2> Listo para empezar una nueva aventura llena de desafios increibles?</h2>
                 <a href="">jugar ahora</a>
-            </div>
+            </div> -->
         </section>
         <div class="redes">
             <h2>Segui nuestras redes!</h2>
@@ -170,6 +178,14 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+        </section>
+        <section class="akali">
+            <div class="cubito">
+            </div>
+            <div class="titulona">
+              <h1>domina con <br><span>estilo</span></h1>
+                <p>Cambia la apariencia de tus campeones favoritos con aspectos y personaliza tu estilo</p>
             </div>
         </section>
     </main>
