--- a/pages/guia.html
+++ b/pages/guia.html
@@ -1,77 +1,62 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="./img/lols.png">
+    <link rel="icon" href="../img/lols.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+NSW+ACT+Foundation:wght@500&family=Edu+QLD+Beginner:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@700&family=Finlandica:wght@700&family=Ibarra+Real+Nova&family=Oswald:wght@600&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro:ital,wght@1,900&family=Splash&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
     <script defer src="../index.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anek+Devanagari:wght@300&family=Dosis:wght@200&family=EB+Garamond&family=Montserrat:wght@100&family=Oswald&family=Roboto+Mono:wght@300&family=Ubuntu:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bodycamp">
-    <header class="header">
-        <nav class="nav">
-            <a class="logo" href="../index.html">
-                <img src="../img/lols.png" alt="logolol">
+<body>
+    <main class="regi">
+        <div class="regilog">
+            <a href="../index.html">
+                <img src="https://signup.leagueoflegends.com/es-ar/assets/lol-logo.png" alt="">
             </a>
-            <button class="nav-toggle" aria-label="abrir menu">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-          <ul class="nav-menu nav-menu_visible">
-            <li class="nav-menu-item">
-                <a href="../index.html" class="nav-menu-link nav-link nav-menu-link_active">inicio</a></li>
-            <li class="nav-menu-item">
-                <a href="campeones.html" class="nav-menu-link nav-link">campeones</a></li>
-            <li class="nav-menu-item">
-                <a href="mapas.html" class="nav-menu-link nav-link">modos de juego</a></li>
-            <li class="nav-menu-item">
-                <a href="galeria.html" class="nav-menu-link nav-link">galeria</a></li>
-            <li class="nav-menu-item">
-                <a href="guia.html" class="nav-menu-link nav-link">como jugar</a></li>
-          </ul>
-        </nav>
-    </header>
-    <div class="camp">
-        <h1> comienza la aventura</h1>
-    </div>
-    <section class="tutos">
-        <div class="divh2">
-            <h2> Paso 1 : Crear cuenta</h2>
         </div>
-        <div class="tutoh2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BEK-UmDu6Jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h3>Ir a Crear Cuenta en caso de no tener una, arriba a la derecha en la barra de navegacion,completar tus datos e iniciar sesion</h3>
-        </div>
-        <div class="divh2">
-            <h2>Paso 2 : Descargar juego</h2>
-        </div>
-        <div class="tutoh2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BEK-UmDu6Jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h3> ir a descargas y tocar en DESCARGAR,una vez descargado instalar siguiendo las instrucciones del instalador</h3>
+        <section class="regitit1">
+            <div class="regitit2">
+             <h1>aqui comienza tu leyenda</h1>
+             <p class="regititp">primero ingresa tu correo electronico</p>
+             <img src="https://signup.leagueoflegends.com/es-mx/assets/divider.png" alt="">
+             <div class="form">
+                <input type="text"  name="correo" placeholder="Ingresa tu correo electronico">
+             </div>
+             <a class="perra" href="./guia.html">iniciar</a>
+             <div class="preg">
+                <p>¿ya tienes una cuenta?</p>
+                <a href="./guia.html">haz click para descargar</a>
+             </div>
+             <section class="pasos">
+                <div class="paso1">
+                    <div class="pelotita1">
+                    </div>
+                    <p>paso 1</p>
+                </div>
+                <div class="line"></div>
+                <div class="paso2">
+                    <div class="pelotita2">
+                    </div>
+                    <p>paso 2</p>
+                </div>
+                <div class="line"></div>
+                <div class="paso2">
+                    <div class="pelotita2">
+                    </div>
+                    <p>paso 3</p>
+                </div>
 
-        </div>
-        <div class="divh2">
-            <h2>Paso 3 : Disfrutar! :)</h2>
-        </div>
-        <div class="tutoh2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BEK-UmDu6Jg" title="YouTube video player" fram3>
-eborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h3> una vez instalado iniciar sesion con la cuenta previamente creada, elegir tu region y a disfrutar!
-        </div>
-    </section>
-    <footer>
-        <div class="playstore">
-            <h3>lleva lol contigo</h3>
-                <p>Descarga la aplicación de LoL para conectarte con amigos y recibir las noticias más recientes del juego y de los esports.</p>
-            <a href="">Ir a playstore</a>
-            <a href="">ir a appstore</a>
-        </div>
-        <p>Copyright.Todos los derechos reservados a LeagueOfLegends.com</p>
-    </footer>
+             </section>
 
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
