--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="./pages/galeria.html" class="nav-menu-link nav-link">galeria</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="./pages/guia.html" class="nav-menu-link nav-link">como jugar</a>
+                    <a href="./pages/guia.html" class="nav-menu-link nav-link">jugar</a>
                 </li>
             </ul>
         </nav>
