terminamos la primera version del proyecto

--- a/pages/guia.html
+++ b/pages/guia.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/lols.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+NSW+ACT+Foundation:wght@500&family=Edu+QLD+Beginner:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@700&family=Finlandica:wght@700&family=Ibarra+Real+Nova&family=Oswald:wght@600&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro:ital,wght@1,900&family=Splash&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
-    <script defer src="../index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anek+Devanagari:wght@300&family=Dosis:wght@200&family=EB+Garamond&family=Montserrat:wght@100&family=Oswald&family=Roboto+Mono:wght@300&family=Ubuntu:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -21,23 +20,23 @@
         </div>
         <section class="regitit1">
             <div class="regitit2">
-             <h1>aqui comienza tu leyenda</h1>
-             <p class="regititp">primero ingresa tu correo electronico</p>
-             <img src="https://signup.leagueoflegends.com/es-mx/assets/divider.png" alt="">
-             <div class="form">
-                <input type="text"  name="correo" placeholder="Ingresa tu correo electronico">
-             </div>
-             <a class="perra" href="./guia.html">iniciar</a>
-             <div class="preg">
-                <p>¿ya tienes una cuenta?</p>
-                <a href="./guia.html">haz click para descargar</a>
-             </div>
-             <section class="pasos">
-                <div class="paso1">
-                    <div class="pelotita1">
-                    </div>
-                    <p>paso 1</p>
+                <h1>aqui comienza tu leyenda</h1>
+                 <p class="regititp">primero ingresa tu correo electronico</p>
+                <img src="https://signup.leagueoflegends.com/es-mx/assets/divider.png" alt="">
+                <div class="form">
+                    <input type="text"  name="correo" placeholder="Ingresa tu correo electronico">
                 </div>
+                <a class="perra" href="./guia.html">iniciar</a>
+                 <div class="preg">
+                    <p>¿ya tienes una cuenta?</p>
+                    <a href="./guia.html">haz click para descargar</a>
+                 </div>
+                 <section class="pasos">
+                    <div class="paso1">
+                        <div class="pelotita1">
+                    </div>
+                        <p>paso 1</p>
+                    </div>
                 <div class="line"></div>
                 <div class="paso2">
                     <div class="pelotita2">
