--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="./img/lols.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+NSW+ACT+Foundation:wght@500&family=Edu+QLD+Beginner:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@700&family=Finlandica:wght@700&family=Ibarra+Real+Nova&family=Oswald:wght@600&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro:ital,wght@1,900&family=Splash&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
@@ -13,30 +18,39 @@
 </head>
 <body class="bodycamp">
     <header class="header">
-        <nav class="nav">
-            <a class="logo" href="../index.html">
-                <img src="../img/lols.png" alt="logolol">
-            </a>
-            <button class="nav-toggle" aria-label="abrir menu">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-          <ul class="nav-menu nav-menu_visible">
-            <li class="nav-menu-item">
-                <a href="../index.html" class="nav-menu-link nav-link nav-menu-link_active">inicio</a></li>
-            <li class="nav-menu-item">
-                <a href="campeones.html" class="nav-menu-link nav-link">campeones</a></li>
-            <li class="nav-menu-item">
-                <a href="mapas.html" class="nav-menu-link nav-link">modos de juego</a></li>
-            <li class="nav-menu-item">
-                <a href="galeria.html" class="nav-menu-link nav-link">galeria</a></li>
-            <li class="nav-menu-item">
-                <a href="guia.html" class="nav-menu-link nav-link">como jugar</a></li>
-          </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark  bg-dark nav-pills">
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="../index.html">
+                <img class="logo" src="https://www.leagueoflegends.com/static/logo-1200-589b3ef693ce8a750fa4b4704f1e61f2.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="campeones.html">campeones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mapas.html">modos de juego</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="galeria.html">galeria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link perrita" href="guia.html">jugar</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-   <div class="camp">
+    <div class="camp">
     <h1>Galeria</h1>
-   </div> 
+    </div> 
     <div class="container-img">
         <div class="box-img">
             <a href="#"></a>
