pusimos icon y nombres a pag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <title>league of legends</title>
+    <title>League of Legends</title>
 </head>
 <body>
     <header class="header">
