--- a/pages/guia.html
+++ b/pages/guia.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Edu+NSW+ACT+Foundation:wght@500&family=Edu+QLD+Beginner:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@700&family=Finlandica:wght@700&family=Ibarra+Real+Nova&family=Oswald:wght@600&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro:ital,wght@1,900&family=Splash&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d2d0798dc4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anek+Devanagari:wght@300&family=Dosis:wght@200&family=EB+Garamond&family=Montserrat:wght@100&family=Oswald&family=Roboto+Mono:wght@300&family=Ubuntu:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>League of Legends - Jugar</title>
 </head>
 <body>
     <main class="regi">
