--- a/pages/guia.html
+++ b/pages/guia.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anek+Devanagari:wght@300&family=Dosis:wght@200&family=EB+Garamond&family=Montserrat:wght@100&family=Oswald&family=Roboto+Mono:wght@300&family=Ubuntu:wght@500&family=Zen+Dots&display=swap" rel="stylesheet">
     <title>League of Legends - Jugar</title>
 </head>
-<body>
+<body class="nashor">
     <main class="regi">
         <div class="regilog">
             <a href="../index.html">
